avence jovenes adolescentes y enseñanza

--- a/subpaginas/adolescentes.html
+++ b/subpaginas/adolescentes.html
@@ -137,32 +137,81 @@
           </div>
         </div>
       </section>
-      <!-- <section>
-        <div class="container">
+      <section>
+        <div class="container objetivo">
+          <div class="row">
+            <div class="col-12 objetivo_titulo">
+              <h2>Objetivos</h2>
+            </div>
+            <div class="objetivo_texto row">
+              <div class="col-12 col-md-6 objetivo_texto-parrafo">
+                <p>Ayudarlos a comprometerse a testificar de Cristo, usando sus habilidades, talentos y dones.</p>
+                <p>Motivar a los adolescente a dedicar y buscar constantemente la presencia de Dios.</p>
+                <p>Insentivar a los adolescentes a convivir en un ambiente de comunión en la casa de Dios.</p>
+              </div>
+              <div class="col-12 col-md-6 d-flex align-items-center objetivo_texto-img">
+                <img class=" w-100 " src="../img/adolescentes/objetivo_adolescente.png" alt="nuestros adolescentes">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container objetivo">
+          <div class="row">
+            <div class="col-12 objetivo_titulo">
+              <h2>Misión</h2>
+            </div>
+            <div class="objetivo_texto row">
+              <div class="col-12 col-md-6 objetivo_texto-parrafo">
+                <p>Guiar a cada adolescente como llegar hacer un discípulo de Jesús, teniendo una vida cristiana y siendo de bendición para su ministerio, llegando hacer ciudadano del reino de los cielos.</p>
+                <p>Incentivarlos a ser parte del servicio ministerial y comunitario, a fin de motivar su crecimiento espiritual que los ayudará a establecer un modelo de servicio para toda la vida.</p>
+              </div>
+              <div class="col-12 col-md-6 d-flex align-items-center objetivo_texto-img">
+                <img class=" w-100 " src="../img/adolescentes/mision_adolescentes.png" alt="nuestros adolescentes">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container ">
           <div class="row">
             <article class="col-12 col-md-6 col-lg-4 video_adoles" >
-              <div class="video_adoles-video">
-                <video src="../img/adolescentes/resumen_2022.mp4"></video>  
+              <div class="d-flex justify-content-center">
+                <video class="w-50 w-md-100" controls src="../img/adolescentes/resumen_2022.mp4"></video>  
               </div>
             </article >
             <article class="col-12 col-md-6 col-lg-4 video_adoles" >
-              <div class="video_adoles-video">
-                <video src="../img/adolescentes/bautizmo_2022.mp4"></video>  
+              <div class="d-flex justify-content-center">
+                <video class="w-50 w-md-100" controls src="../img/adolescentes/bautizmo_2022.mp4"></video>  
               </div>
             </article >
             <article class="col-12 col-md-6 col-lg-4 video_adoles" >
-              <div class="tarjeta_video-video">
-                <video src="../img/adolescentes/dia_del_amigo.mp4"></video>  
-              </div>
-            </article >
-            <article class="col-12 col-md-6 col-lg-4 video_adoles" >
-              <div class="tarjeta_video-video">
-                <video src="../img/adolescentes/campa_2022.mp4"></video>  
+              <div class="d-flex justify-content-center">
+                <video class="w-50 w-md-100" controls src="../img/adolescentes/dia_del_amigo.mp4"></video>  
               </div>
             </article >
           </div>
         </div>
-      </section> -->
+      </section>
+      <section>
+        <div class="container mt-5 mb-5">
+          <div class="row">
+            <div class="col-12 d-flex justify-content-center nuestras_redes">
+              <h2 class="text-center redes_adolescentes">Encuentranos en Nuestras Redes</h2>
+            </div>
+            <div class="col-12 d-flex justify-content-center" >
+              <a href="https://www.instagram.com/adolescentesroosevelt/" target="_blank">
+                <i class="bi bi-instagram px-5 icon-redes_adolescente"></i>
+              </a>
+              <a href="https://www.facebook.com/adolescentesroosevelt.ice" target="_blank">
+                <i class="bi bi-facebook px-5 icon-redes_adolescente"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="container-fluit footer">
       <div class="container">
