--- a/subpaginas/jovenes.html
+++ b/subpaginas/jovenes.html
@@ -91,10 +91,117 @@
     </header>
     <main>
       <section>
-        <div class="container-fluit">
-          <video controls autoplay  class="col-12">
-            <source src="../video/logo_jovenes_animado.mp4" type="video/mp4" class="col-12 autoplay controls" >
-          </video>
+        <div class="container-fluit d-flex justify-content-center portada_jovenes">
+          <img class="w-25" src="../img/jovenes/logo_jovenes.png" alt="logo jovenes">
+        </div>
+      </section>
+      <section class="sec_lideres" >
+        <div class="container tar_lider">
+          <div class="col-12 d-flex justify-content-center mt-4 " >
+            <h2 class="tetxt-center" >Nuestros Lideres</h2>
+          </div>
+          <div class="row">
+            <div class="col-12 order-2 order-md-1 col-md-5 contenedor_tarjeta">
+              <div class="tarjeta_lider">
+                <div class="cover">
+                  <img src="../img/adolescentes/tarjeta_fede.png" alt="Federico Luciani">
+                  <div class="img__back"></div>
+                </div> 
+                <div class="descripcion">
+                  <h2 class="text-center" >Federico Luciani</h2>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 order-1 order-md-2 col-md-2 fs-5 d-flex justify-content-center align-items-center" >
+              <p class="text-center mision_lider" >Nuestros Lideres son los encargados de guiar e instruir espirutualmente a nuestros adolescentes</p>
+            </div>
+            <div class="col-12 order-3 col-md-5 contenedor_tarjeta">
+              <div class="tarjeta_lider">
+                <div class="cover">
+                  <img src="../img/adolescentes/tarjeta_mayi.png" alt="Mayi Pérez">
+                  <div class="img__back"></div>
+                </div> 
+                <div class="descripcion">
+                  <h2 class="text-center" >Mayi Pérez</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container objetivo">
+          <div class="row">
+            <div class="col-12 objetivo_titulo">
+              <h2>Objetivos</h2>
+            </div>
+            <div class="objetivo_texto row">
+              <div class="col-12 col-md-6 objetivo_texto-parrafo">
+                <p>Conducir a los jóvenes a descubrir y desarrollar sus dones.</p>
+                <p>Equipar y capacitarlos para una vida de servicio dentro de la iglesia.</p>
+                <p>Asegurar su integración en todos los aspectos de la vida de liderazgo de la Iglesia.</p>
+              </div>
+              <div class="d-flex justify-content-center align-items-center col-12 col-md-6 objetivo_texto-img">
+                <img class="w-100 w-md-50 p-2 " src="../img/jovenes/objetivo_jovenes.jpg" alt="nuestros adolescentes">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container mision">
+          <div class="row">
+            <div class="col-12 mision_titulo">
+              <h2>Misión</h2>
+            </div>
+            <div class="mision_texto row">
+              <div class="col-12 col-md-6 align-items-center mision_texto-parrafo">
+                <p>Guiar a los jóvenes a una relación personal con Jesús, para que les cambie la vida.</p>
+                <p>Crear un grupo de jóvenes cristianos que ame, tema y sirva a Dios a traves del conocimiento de su palabra y el poder de su Espíritu Santo, manifestado en sus vidas, las cuales compartan y testifiquen de JESUCRISTO.</p>
+              </div>
+              <div class="col-12 col-md-6 d-flex justify-content-center align-items-center mision_texto-img">
+                <img class=" w-75" src="../img/jovenes/mision_jovenes.jpg" alt="nuestros adolescentes">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container ">
+          <div class="row">
+            <article class="col-12 col-md-6 col-lg-4 video_adoles" >
+              <div class="d-flex justify-content-center">
+                <video class="w-50 w-md-100" controls src="../img/adolescentes/resumen_2022.mp4"></video>  
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 video_adoles" >
+              <div class="d-flex justify-content-center">
+                <video class="w-50 w-md-100" controls src="../img/adolescentes/bautizmo_2022.mp4"></video>  
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 video_adoles" >
+              <div class="d-flex justify-content-center">
+                <video class="w-50 w-md-100" controls src="../img/adolescentes/dia_del_amigo.mp4"></video>  
+              </div>
+            </article >
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container mt-5 mb-5">
+          <div class="row">
+            <div class="col-12 d-flex justify-content-center nuestras_redes">
+              <h2 class="text-center redes_adolescentes">Encuentranos en Nuestras Redes</h2>
+            </div>
+            <div class="col-12 d-flex justify-content-center" >
+              <a href="https://www.instagram.com/jovenesurquiza/" target="_blank">
+                <i class="bi bi-instagram px-5 icon-redes_adolescente"></i>
+              </a>
+              <a href="https://open.spotify.com/show/5twKMSlQjV0N55FmNYIjuY?si=CCBtkPVDSP6YVx-evFxuFg&utm_source=instagram&utm_medium=ig_stories&nd=1" target="_blank">
+                <i class="bi bi-spotify px-5 icon-redes_adolescente"></i>
+              </a>
+            </div>
+          </div>
         </div>
       </section>
     </main>
