--- a/subpaginas/estudio_de_la_biblia.html
+++ b/subpaginas/estudio_de_la_biblia.html
@@ -91,56 +91,66 @@
     </header>
     <main>
       <section>
-        <div class="container">
-          <div class="row portada_eb d-flex align-content-star">
-            <img src="../img/estudio_de_la_biblia/enseñanza horizontqal(1).png" alt="estudio de la biblia">
+        <div class="containers">
+          <div class="portada_eb">
+            <img class="w-100" src="../img/estudio_de_la_biblia/enseñanza horizontqal(1).png" alt="estudio de la biblia">
           </div>
         </div>
       </section>
       <section>
-        <div class="container">
+        <div class="container texto_eb portada_eb-versiculo">
+          <h2 class="text-center">"Escudriñad las Escrituras;
+            porque a vosotros os parece que en ellas
+            tenéis la vida eterna;
+            y ellas son las que dan testimonio de mí."
+          </h2>
+          <p class="text-center ">- Juan 5:39 -</p>
+        </div>
+      </section>
+      <section>
+        <div class="container texto_eb">
           <div class="row">
-            <h2>Estudiamos las Santas Escrituras</h2>
-            <p>La Biblia consta de 66 escritos o libros distintos. Más de 40 autores de diversas condiciones sociales escribieron el texto durante un período de aproximadamente 1.400 a 1.800 años. Aunque se ha identificado a muchos de los autores, algunos permanecen desconocidos.</p>
-            <p> La Biblia está dividida en dos partes principales: el Antiguo Testamento, compuesto de 39 libros, y el Nuevo Testamento, compuesto de 27. El Antiguo Testamento que siempre ha sido las Escrituras de la nación de Israel, estaba dividido en tres secciones: la Ley o Torá, los Profetas o Nebi´im, los Escritos o Kethubim.</p>
-            <p> El Antiguo Testamento fue escrito en dos idiomas semíticos: hebreo y arameo -, la inmensa mayoría en hebreo. Después del cautiverio babilónico se tradujo gran parte del Antiguo Testamento al arameo; a estas obras se les conoce como los tárgunes. Entre los años y 100 a.C. se tradujo al griego koiné (común). A esa traducción se le llama la Septuaginta o la Versión de los Setenta (LXX). Consta de los mismo libros que el Antiguo Testamento hebreo, pero se cambió el orden y la división  de los libros a la forma en que aparecen actualmente en el Antiguo Testamento.    </p>
-            <p> A diferencia del Antiguo Testamento, el Nuevo Testamento no fue escrito en hebreo sino en el griego koiné, debido a que era el idioma que se hablaba en casi todo el mundo mediterráneo en la época de Jesucristo. Sin embargo, el idioma corriente del pueblo de Israel era el arameo. A eso se debe que Jesús y sus discípulos comúnmente hablaban arameo y griego, y que en el Nuevo Testamento aparezca una que otra frase en arameo.</p>
+            <h2 class="texto_eb-subtitulo">Estudiamos las Santas Escrituras</h2>
+            <p class="texto_eb-contexto">La Biblia consta de 66 escritos o libros distintos. Más de 40 autores de diversas condiciones sociales escribieron el texto durante un período de aproximadamente 1.400 a 1.800 años. Aunque se ha identificado a muchos de los autores, algunos permanecen desconocidos.</p>
+            <p class="texto_eb-contexto"> La Biblia está dividida en dos partes principales: el Antiguo Testamento, compuesto de 39 libros, y el Nuevo Testamento, compuesto de 27. El Antiguo Testamento que siempre ha sido las Escrituras de la nación de Israel, estaba dividido en tres secciones: la Ley o Torá, los Profetas o Nebi´im, los Escritos o Kethubim.</p>
+            <p class="texto_eb-contexto"> El Antiguo Testamento fue escrito en dos idiomas semíticos: hebreo y arameo -, la inmensa mayoría en hebreo. Después del cautiverio babilónico se tradujo gran parte del Antiguo Testamento al arameo; a estas obras se les conoce como los tárgunes. Entre los años y 100 a.C. se tradujo al griego koiné (común). A esa traducción se le llama la Septuaginta o la Versión de los Setenta (LXX). Consta de los mismo libros que el Antiguo Testamento hebreo, pero se cambió el orden y la división  de los libros a la forma en que aparecen actualmente en el Antiguo Testamento.    </p>
+            <p class="texto_eb-contexto"> A diferencia del Antiguo Testamento, el Nuevo Testamento no fue escrito en hebreo sino en el griego koiné, debido a que era el idioma que se hablaba en casi todo el mundo mediterráneo en la época de Jesucristo. Sin embargo, el idioma corriente del pueblo de Israel era el arameo. A eso se debe que Jesús y sus discípulos comúnmente hablaban arameo y griego, y que en el Nuevo Testamento aparezca una que otra frase en arameo.</p>
           </div>
           <div class="row">
-            <h2>¿CÓMO FUE ESCRITA Y TRADUCIDA LA BIBLIA?</h2>
-            <p>   La Biblia misma nos dice cómo fue escrita: "Toda la Escritura es inspirada por Dios" (2Ti 3:16). Los autores "hablaron siendo inspirados por el Espíritu Santo" (2P 1:21). La palabra griega para inspirado, theopneustos, quiera decir "exhalado por Dios". El Espíritu Santo impulsó a los autores; inspirándolos y guiándolos mientras escribían en sus propias palabras lo que Dios quería que dijeran. Así tenemos la inspiración verbal, porque las palabras del texto original las inspiró Dios. Y como toda la Escritura fue dada por inspiración, tenemos inspiración plenaria. Toda la Biblia es inspirada. La Biblia no sólo contiene las palabras de Dios, sino que en realidad es la Palabra de Dios. Así los escritos originales, llamados autógrafos, son infalibles,  es decir, no tienen error. A este concepto se le conoce como las inspiración verbal y plenaria de los autógrafos.     </p>
+            <h2 class="texto_eb-subtitulo">¿CÓMO FUE ESCRITA Y TRADUCIDA LA BIBLIA?</h2>
+            <p class="texto_eb-contexto">   La Biblia misma nos dice cómo fue escrita: "Toda la Escritura es inspirada por Dios" (2Ti 3:16). Los autores "hablaron siendo inspirados por el Espíritu Santo" (2P 1:21). La palabra griega para inspirado, theopneustos, quiera decir "exhalado por Dios". El Espíritu Santo impulsó a los autores; inspirándolos y guiándolos mientras escribían en sus propias palabras lo que Dios quería que dijeran. Así tenemos la inspiración verbal, porque las palabras del texto original las inspiró Dios. Y como toda la Escritura fue dada por inspiración, tenemos inspiración plenaria. Toda la Biblia es inspirada. La Biblia no sólo contiene las palabras de Dios, sino que en realidad es la Palabra de Dios. Así los escritos originales, llamados autógrafos, son infalibles,  es decir, no tienen error. A este concepto se le conoce como las inspiración verbal y plenaria de los autógrafos.     </p>
           </div>
           <div class="row">
-            <h2>¿Por qué Estudiar la Biblia?</h2>
-            <p>Si lo consideramos solamente por el hecho de que somos cristianos y se supone que deberíamos hacerlo, esto no es suficiente. Hay muchos cristianos que la estudia y no están de acuerdo en sus conclusiones, y estudian el mismo libro.</p>
-            <p>Tiene que haber una razón con más peso, algo que nos lleve a una unidad de pensamiento. Consideremos esta idea: Estudiar la Biblia porque es la palabra de Dios. Es su pensamiento, lo que él piensa, su voluntad y por esta razón de que es su palabra da todo el peso y la razón suficiente para estudiarla.</p>
+            <h2 class="texto_eb-subtitulo">¿Por qué Estudiar la Biblia?</h2>
+            <p class="texto_eb-contexto">Si lo consideramos solamente por el hecho de que somos cristianos y se supone que deberíamos hacerlo, esto no es suficiente. Hay muchos cristianos que la estudia y no están de acuerdo en sus conclusiones, y estudian el mismo libro.</p>
+            <p class="texto_eb-contexto">Tiene que haber una razón con más peso, algo que nos lleve a una unidad de pensamiento. Consideremos esta idea: Estudiar la Biblia porque es la palabra de Dios. Es su pensamiento, lo que él piensa, su voluntad y por esta razón de que es su palabra da todo el peso y la razón suficiente para estudiarla.</p>
           </div>
           <div class="row">
-            <h2>¿Cómo Estudiar la Biblia?</h2>
-            <p>Por ser la Biblia la palabra de Dios, originada en Dios mismo; debe ser estudiada sin prejuicios, ideas preconcebidas, opiniones personales, conclusiones ya hechas, etc.</p>
-            <p>Debe ser estudiada así como Dios la está dando, los autores que usa, los destinatarios que escogió, las diferentes maneras de expresarse que utilizo. En fin tomarla como viene originalmente sin interrupciones.</p>
-            <p>Inductivo: Se sacan las conclusiones del estudio y no se llega al estudio con las conclusiones hechas. Esta la actitud para estudiar la Biblia, porque es la palabra de Dios y no la nuestra.</p>
+            <h2 class="texto_eb-subtitulo">¿Cómo Estudiar la Biblia?</h2>
+            <p class="texto_eb-contexto">Por ser la Biblia la palabra de Dios, originada en Dios mismo; debe ser estudiada sin prejuicios, ideas preconcebidas, opiniones personales, conclusiones ya hechas, etc.</p>
+            <p class="texto_eb-contexto">Debe ser estudiada así como Dios la está dando, los autores que usa, los destinatarios que escogió, las diferentes maneras de expresarse que utilizo. En fin tomarla como viene originalmente sin interrupciones.</p>
+            <p class="texto_eb-contexto">Inductivo: Se sacan las conclusiones del estudio y no se llega al estudio con las conclusiones hechas. Esta la actitud para estudiar la Biblia, porque es la palabra de Dios y no la nuestra.</p>
           </div>
           <div class="row">
-            <h2>¿Cuándo Estudiar la Biblia?</h2>
-            <p>Nunca podremos decir que conocemos la Biblia a pesar de mucho tiempo estudiándola, proviene de una mente infinita, ilimitada. Siempre debemos estudiarla, que afecte el cómo pensamos, y el cómo nos relacionamos con Dios. Esta meta necesita de un estudio constante, ajustar nuestros pensar con el de Dios mismo.</p>
+            <h2 class="texto_eb-subtitulo">¿Cuándo Estudiar la Biblia?</h2>
+            <p class="texto_eb-contexto">Nunca podremos decir que conocemos la Biblia a pesar de mucho tiempo estudiándola, proviene de una mente infinita, ilimitada. Siempre debemos estudiarla, que afecte el cómo pensamos, y el cómo nos relacionamos con Dios. Esta meta necesita de un estudio constante, ajustar nuestros pensar con el de Dios mismo.</p>
           </div>
           <div class="row">
-            <h2>¿Con quién Estudiar la Biblia?</h2>
-            <p>Con su autor, como Dios mismo quiere que se estudie. El Espíritu Santo, quien es Dios mismo, es el autor de la Biblia, y su trabajo hoy en la Iglesia, es revelar la verdad, dar convicción de pecado, iluminar nuestro entendimiento, revelarnos a Dios.</p>
-            <p>Por consiguiente una relación con Dios se vuelve un requisito para el estudio de la Biblia. Si no, la Biblia será un libro simplemente para nosotros, sin vida.</p>
+            <h2 class="texto_eb-subtitulo">¿Con quién Estudiar la Biblia?</h2>
+            <p class="texto_eb-contexto">Con su autor, como Dios mismo quiere que se estudie. El Espíritu Santo, quien es Dios mismo, es el autor de la Biblia, y su trabajo hoy en la Iglesia, es revelar la verdad, dar convicción de pecado, iluminar nuestro entendimiento, revelarnos a Dios.</p>
+            <p class="texto_eb-contexto">Por consiguiente una relación con Dios se vuelve un requisito para el estudio de la Biblia. Si no, la Biblia será un libro simplemente para nosotros, sin vida.</p>
           </div>
           <div class="row">
-            <h2>¿Dónde Estudiar la Biblia?</h2>
-            <p>Un lugar específico de estudio, y a la vez en cualquier lugar cuando no tenga mi lugar de estudio. El estudiar la Biblia es una guerra espiritual, el diablo buscará la manera para apartarnos de la Biblia y de su estudio; usara todo para detenernos.</p>
-            <p>Por eso es recomendable, usar las horas muertas, tener una Biblia pequeña, tener una en el teléfono portátil, en las esperas que siempre tenemos de horas muertas, leer, estudiar, tomar notas, meditar, pensar, imaginar, etc.</p>
-            <p>Estaremos estudiando constantemente, y también una comunión con Dios, estaremos sintonizados con Dios mismo.</p>
-            <p>Hacerlo un hábito, algo natural, que sea parte de nosotros.</p>
+            <h2 class="texto_eb-subtitulo">¿Dónde Estudiar la Biblia?</h2>
+            <p class="texto_eb-contexto">Un lugar específico de estudio, y a la vez en cualquier lugar cuando no tenga mi lugar de estudio. El estudiar la Biblia es una guerra espiritual, el diablo buscará la manera para apartarnos de la Biblia y de su estudio; usara todo para detenernos.</p>
+            <p class="texto_eb-contexto">Por eso es recomendable, usar las horas muertas, tener una Biblia pequeña, tener una en el teléfono portátil, en las esperas que siempre tenemos de horas muertas, leer, estudiar, tomar notas, meditar, pensar, imaginar, etc.</p>
+            <p class="texto_eb-contexto">Estaremos estudiando constantemente, y también una comunión con Dios, estaremos sintonizados con Dios mismo.</p>
+            <p class="texto_eb-contexto">Hacerlo un hábito, algo natural, que sea parte de nosotros.</p>
           </div>
           <div class="row">
-            <h2>¿Qué estudiar en la Biblia?</h2>
-            <p>Tenemos que enfocarnos en los hechos que sucedieron para conseguir porque se escribió el libro y llegar a su única interpretación.</p>
-            <p>Es la autoridad la Biblia misma, nos sujetamos a ella, y nos dirá cuál es su mensaje. No es lo que nos parece a nosotros, ni lo que alguien dice, es lo que la Biblia dice; y lo está diciendo por los hechos mismos:</p>
+            <h2 class="texto_eb-subtitulo">¿Qué estudiar en la Biblia?</h2>
+            <p class="texto_eb-contexto">Tenemos que enfocarnos en los hechos que sucedieron para conseguir porque se escribió el libro y llegar a su única interpretación.</p>
+            <p class="texto_eb-contexto">Es la autoridad la Biblia misma, nos sujetamos a ella, y nos dirá cuál es su mensaje. No es lo que nos parece a nosotros, ni lo que alguien dice, es lo que la Biblia dice; y lo está diciendo por los hechos mismos:</p>
             <span>Situación del Autor: ¿Quién es y por qué escribe?</span>
             <span>Situación de los Destinatarios: ¿Quiénes son y cómo entendieron el mensaje del autor?</span>
             <span>Propósito: ¿Qué era lo que estaba pasando, por qué se escribió el libro?</span>
