terminando adolescentes y jovenes, inicio de alabanza

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <li><a class="navbar-suba" href="./subpaginas/jovenes.html">Jovenes</a></li>
                   <li><a class="navbar-suba" href="./subpaginas/adolescentes.html">Adolescentes</a></li>
                   <li><a class="navbar-suba" href="./subpaginas/escuela_biblica.html">Escuelita Bilica</a></li>
-                  <li><a class="navbar-suba" href="./subpaginas/musica.html">Musica</a></li>
+                  <li><a class="navbar-suba" href="./subpaginas/alabanza.html">Alabanza</a></li>
                 </ul>
               </li>
               <li><a class="nav-link navbar-a" href="./paginas/servicio.html">Servicios</a></li>
