--- a/subpaginas/adolescentes.html
+++ b/subpaginas/adolescentes.html
@@ -63,7 +63,7 @@
                 <li><a class="navbar-suba" href="./jovenes.html">Jovenes</a></li>
                 <li><a class="navbar-suba" href="./adolescentes.html">Adolescentes</a></li>
                 <li><a class="navbar-suba" href="./escuela_biblica.html">Escuelita Bilica</a></li>
-                <li><a class="navbar-suba" href="./musica.html">Musica</a></li>
+                <li><a class="navbar-suba" href="./alabanza.html">Alabanza</a></li>
               </ul>
             </li>
             <li><a class="nav-link navbar-a" href="../paginas/servicio.html">Servicios</a></li>
@@ -104,37 +104,9 @@
         </div>
       </section>
       <section class="sec_lideres" >
-        <div class="container tar_lider">
-          <div class="col-12 d-flex justify-content-center mt-4 " >
-            <h2 class="tetxt-center" >Nuestros Lideres</h2>
-          </div>
-          <div class="row">
-            <div class="col-12 order-2 order-md-1 col-md-5 contenedor_tarjeta">
-              <div class="tarjeta_lider">
-                <div class="cover">
-                  <img src="../img/adolescentes/tarjeta_fede.png" alt="Federico Luciani">
-                  <div class="img__back"></div>
-                </div> 
-                <div class="descripcion">
-                  <h2 class="text-center" >Federico Luciani</h2>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 order-1 order-md-2 col-md-2 fs-5 d-flex justify-content-center align-items-center" >
-              <p class="text-center mision_lider" >Nuestros Lideres son los encargados de guiar e instruir espirutualmente a nuestros adolescentes</p>
-            </div>
-            <div class="col-12 order-3 col-md-5 contenedor_tarjeta">
-              <div class="tarjeta_lider">
-                <div class="cover">
-                  <img src="../img/adolescentes/tarjeta_mayi.png" alt="Mayi Pérez">
-                  <div class="img__back"></div>
-                </div> 
-                <div class="descripcion">
-                  <h2 class="text-center" >Mayi Pérez</h2>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="container">
+          <h2 class="text-center fs-1 mt-4">Nuestros Lideres de Adolescentes</h2>
+          <p class="text-center w-75 fs-2 m-auto">Como mentores tenemos una gran responsabilidad de formar personas firmes en su fe, que amen a Jesús con pasión y que vivan en su vida con convicciones claras en el evangelio, estos consejos para los jóvenes cristianos serán de muchísima ayuda.</p>
         </div>
       </section>
       <section>
@@ -210,6 +182,11 @@
               </a>
             </div>
           </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <p class="text-center fs-3">Adolescéntes, sabemos que el camino no es fácil, pero recuerda que nuestra corona en el cielo nos espera y nuestra mirada está puesta en Jesús y su reino.</p>
         </div>
       </section>
     </main>
