--- a/subpaginas/alabanza.html
+++ b/subpaginas/alabanza.html
@@ -63,7 +63,7 @@
                 <li><a class="navbar-suba" href="./jovenes.html">Jovenes</a></li>
                 <li><a class="navbar-suba" href="./adolescentes.html">Adolescentes</a></li>
                 <li><a class="navbar-suba" href="./escuela_biblica.html">Escuelita Bilica</a></li>
-                <li><a class="navbar-suba" href="./musica.html">Musica</a></li>
+                <li><a class="navbar-suba" href="./alabanza.html">Alabanzas</a></li>
               </ul>
             </li>
             <li><a class="nav-link navbar-a" href="../paginas/servicio.html">Servicios</a></li>
@@ -89,6 +89,13 @@
         </nav>
       </div>
     </header>
+    <main>
+      <section>
+        <div class="container-fluit">
+          <img class="w-100 h-75" src="../img/alabanza/portada.jpg" alt="alabad a dios">
+        </div>
+      </section>
+    </main>
     <footer class="container-fluit footer">
       <div class="container">
         <div class="row">
