--- a/subpaginas/jovenes.html
+++ b/subpaginas/jovenes.html
@@ -63,7 +63,7 @@
                 <li><a class="navbar-suba" href="./jovenes.html">Jovenes</a></li>
                 <li><a class="navbar-suba" href="./adolescentes.html">Adolescentes</a></li>
                 <li><a class="navbar-suba" href="./escuela_biblica.html">Escuelita Bilica</a></li>
-                <li><a class="navbar-suba" href="./musica.html">Musica</a></li>
+                <li><a class="navbar-suba" href="./alabanza.html">Alabanza</a></li>
               </ul>
             </li>
             <li><a class="nav-link navbar-a" href="../paginas/servicio.html">Servicios</a></li>
@@ -95,38 +95,11 @@
           <img class="w-25" src="../img/jovenes/logo_jovenes.png" alt="logo jovenes">
         </div>
       </section>
-      <section class="sec_lideres" >
-        <div class="container tar_lider">
-          <div class="col-12 d-flex justify-content-center mt-4 " >
-            <h2 class="tetxt-center" >Nuestros Lideres</h2>
-          </div>
-          <div class="row">
-            <div class="col-12 order-2 order-md-1 col-md-5 contenedor_tarjeta">
-              <div class="tarjeta_lider">
-                <div class="cover">
-                  <img src="../img/adolescentes/tarjeta_fede.png" alt="Federico Luciani">
-                  <div class="img__back"></div>
-                </div> 
-                <div class="descripcion">
-                  <h2 class="text-center" >Federico Luciani</h2>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 order-1 order-md-2 col-md-2 fs-5 d-flex justify-content-center align-items-center" >
-              <p class="text-center mision_lider" >Nuestros Lideres son los encargados de guiar e instruir espirutualmente a nuestros adolescentes</p>
-            </div>
-            <div class="col-12 order-3 col-md-5 contenedor_tarjeta">
-              <div class="tarjeta_lider">
-                <div class="cover">
-                  <img src="../img/adolescentes/tarjeta_mayi.png" alt="Mayi Pérez">
-                  <div class="img__back"></div>
-                </div> 
-                <div class="descripcion">
-                  <h2 class="text-center" >Mayi Pérez</h2>
-                </div>
-              </div>
-            </div>
-          </div>
+      <section class="sec_lideres">
+        <div class="container w-75">
+          <h2 class="text-center fs-1 mt-4">Nuestros Lideres de Jovenes</h2>
+          <p class="fs-3 text-center">Creo que en un contexto juvenil el compañerismo o socialización y hasta la diversión tienen su lugar. Sin embargo, ellos tienen necesidades particulares debido a la etapa de vida en que se encuentran. Y para cada necesidad la Biblia tiene respuestas.
+          <p class="fs-3 text-center">Solo Dios tiene el poder para transformar el corazón caído de una vida. ¡Nosotros como líderes oramos por los jóvenes! Oramos con frecuencia y promovemos esa disciplina entre nuestros colaboradores y entre los mismos jóvenes.</p></p>
         </div>
       </section>
       <section>
@@ -203,6 +176,9 @@
             </div>
           </div>
         </div>
+      </section>
+      <section>
+        <p class="text-center fs-1 w-75 m-auto">"Solo Dios tiene el poder para transformar el corazón caído de una vida."</p>
       </section>
     </main>
     <footer class="container-fluit footer">
