--- a/subpaginas/evangelizacion.html
+++ b/subpaginas/evangelizacion.html
@@ -63,7 +63,7 @@
                 <li><a class="navbar-suba" href="./jovenes.html">Jovenes</a></li>
                 <li><a class="navbar-suba" href="./adolescentes.html">Adolescentes</a></li>
                 <li><a class="navbar-suba" href="./escuela_biblica.html">Escuelita Bilica</a></li>
-                <li><a class="navbar-suba" href="./musica.html">Musica</a></li>
+                <li><a class="navbar-suba" href="./alabanza.html">Alabanza</a></li>
               </ul>
             </li>
             <li><a class="nav-link navbar-a" href="../paginas/servicio.html">Servicios</a></li>
