--- a/subpaginas/alabanza.html
+++ b/subpaginas/alabanza.html
@@ -95,6 +95,11 @@
           <img class="w-100 h-75" src="../img/alabanza/portada.jpg" alt="alabad a dios">
         </div>
       </section>
+      <section class="cancionero">
+        <div class="container-fluit">
+          <object class="pdf_alabanza" type="application/pdf"  data="../pdf/cancionerio_iglesia-urquiza.pdf"></object>
+        </div>
+      </section>
     </main>
     <footer class="container-fluit footer">
       <div class="container">
