agragando book de canciones

--- a/subpaginas/alabanza.html
+++ b/subpaginas/alabanza.html
@@ -91,8 +91,165 @@
     </header>
     <main>
       <section>
-        <div class="container-fluit">
-          <img class="w-100 h-75" src="../img/alabanza/portada.jpg" alt="alabad a dios">
+        <div class="container-fluit portada_book">
+          <img class="" src="../img/alabanza/portada.jpg" alt="alabad a dios">
+        </div>
+      </section>
+      <section>
+        <div class="container container_book d-flex justify-content-center align-content-center" id="container_book">
+          <div class="book-content">
+            <div class="book">
+              <div class="face-front" id="portada">
+              </div>
+              <div class="face-back ">
+                <span>1</span>
+                <p>Alzaré mis ojos a los montes
+                  ¿De dónde viene mi socorro?                  
+                  Mi socorro viene de Jehová                  
+                  que hizo los cielos y la tierra                  
+                  No dará mi pie al resbaladero                  
+                  ni se dormirá el que me guarda                  
+                  Jehová es mi guardador                  
+                  desde ahora y para siempre</p>
+              </div>
+            </div>
+            
+            <div class="book">
+              <div class="face-front">
+                <span>2</span>
+                <p>Dios esta aquí,
+                tan cierto como el aire que respiro,      
+                tan cierto como la mañana se levanta
+                tan cierto como que le hablo y me puede oír
+                tan cierto como que le hablo
+                tan cierto como que le hablo y me puede oír</p>
+              </div>
+              <div class="face-back">
+                <span>3</span>
+                <p>
+                  Canto de alegría porque tengo amor
+                  Vivo cada día por el Salvador
+                  Quiere todo el mundo de Él siempre hablar
+                  Porque Cristo a todos nos quiere salvar
+                  Por eso canto, porque tengo amor
+                  Vivo por El Salvador
+                  Quiero de Él siempre hablar
+                </p>
+              </div>
+            </div>
+            <div class="book">
+              <div class="face-front">
+                <span></span>
+                <p class="mt-4">Porque nos quiere salvar
+                  En todas las pruebas Él te sostendra
+                  No te desampara, no te dejará
+                  Él te necesita para trabajar
+                  Vamos adelante, vamos a triunfa</p>
+              </div>
+              <div class="face-back">
+                <span>4</span>
+                <p>Dicen que no existes, que no eres realidad,
+                  pero estas vibrando dentro mío una vez más
+                  Obras en tu pueblo con amor y santidad
+                  y te siento más y más
+                </p>
+              </div>
+            </div>
+            <div class="book">
+              <div class="face-front">
+                <span>5</span>
+                <p>Cual la quietud de un arroyo
+                  Es la paz que yo siento
+                  Cuando estoy con mi Jesús.
+                  V
+                  Es su amor tan sublime
+                  Y su gozo inefable,
+                  Que hace feliz el corazon.
+                  Yo quiero más de mi Cristo,
+                  Mas del Maestro,
+                  Más de Jesús, más por siempre.
+                  C
+                  Cual la quietud de un arroyo
+                  Es la paz que yo siento
+                  Cuando estoy con mi Jesús.</p>
+              </div>
+              <div class="face-back">
+                <span>6</span>
+                <p>Por tu amor..... Tú diste la vida
+                  Por tu amor..... salvaste la mía
+                  Soy tu deudor, deudor de por vida
+                  Y quiero servirte, servir por amor.
+                </p>
+              </div>
+            </div>
+            <div class="book">
+              <div class="face-front">
+                <span>7</span>
+                <p>Fija tus ojos en Cristo
+                  tan llenos de gracia y amor
+                  y lo terrenal sin valor será
+                a la luz del glorioso Señor.</p>
+              </div>
+              <div class="face-back">
+                <span>8</span>
+                <p>Cuando Cristo vino a mi co...razón,
+                  mi vida entera cambió;          
+                  su paz y su amor aleja...ron de mi
+                  las dudas, las penas y el temor.                               
+                  //Mi vida comenzó cuando el Señor llegó,          
+                  y hoy puedo cantar a su amor//                               
+                  Quisiera que Cristo te transforme a ti,          
+                  que cambie tu vida también.          
+                  Piensa en la Cruz donde Él mu...rió por ti          
+                  y ábrele tu corazón.
+                </p>
+              </div>
+            </div>
+            <div class="book">
+              <div class="face-front">
+                <span>9</span>
+                <p>Cuando miro los claros cielos
+                  veo las obras de Tus dedos,
+                  digo, ¿qué es el hombre
+                  para que te acuerdes de él?
+                  Digo, ¿qué es el hombre
+                  para que te acuerdes de él?
+                  Todo lo pusiste
+                  debajo de Tus pies.
+                  Todo lo que pasa
+                  por la senda y el mar.
+                  Oh, Jehová, Señor nuestro,
+                  cuán grande es tu nombre
+                  en toda la tierra
+                  y en mi corazón,
+                  y en mi corazón.</p>
+              </div>
+              <div class="face-back">
+                <span>10</span>
+                <p>Enseñame a hacer tu voluntad porque
+                  Tu eres mi Dios
+                  Tu buen espiritu me guie por sendas
+                  De rectitud
+                  Por tu nombre, Oh Jehová, me vivificaras
+                  Enseñame a hacer tu voluntad porque
+                  Tu eres mi Dios
+                </p>
+              </div>
+            </div>
+            <div class="book">
+              <div class="face-front d-flex flex-column justify-content-center align-content-center">
+                <h2 class="text-center">Isaías 25:1</h2>
+                <p>Señor, tú eres mi Dios;
+                  te exaltaré y alabaré tu nombre
+                  porque has hecho maravillas.
+                  Desde tiempos antiguos
+                  tus planes son fieles y seguros.</p>
+              </div>
+              <div class="face-back" id="portada-back">
+                <img class="w-100 h-100" src="../img/alabanza/portada_book.jpg" alt="">
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="cancionero">
@@ -140,5 +297,6 @@
       </div>
     </footer>  
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+      <script src="../Javascript/alabanza.js"></script>
   </body>
   </html>
