--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
                   <li><a class="navbar-suba" href="./subpaginas/alabanza.html">Alabanza</a></li>
                 </ul>
               </li>
-              <li><a class="nav-link navbar-a" href="./paginas/servicio.html">Servicios</a></li>
               <li><a class="nav-link navbar-a" href="#">Actividades</a>
                 <ul class="navbar-submenu" >
                   <li><a class="navbar-suba" href="./subpaginas/estudio_de_la_biblia.html">Estudio de La Biblia</a></li>
@@ -93,9 +92,9 @@
       </div>
     </section>
     <section>
-      <div class="container-fluit mt-5">
+      <div class="container-fluit w-100 ml-0">
         <div class="row d-flex justify-content-center suscribir-index">
-          <div class="container col-12 col-md-4 text-center form-textindex" >
+          <div class="container-fluit  col-12 col-md-4 text-center form-textindex" >
             <h2>Mensaje en tu Correo</h2>
             <p>Te enviaremos todas nuestras actividades y novedades</p>
           </div>
@@ -104,15 +103,12 @@
               <div class="container">
                 <div class="row ">
                   <div class="col-12 col-md-4">
-                    <!-- <label for="">Nombre</label> -->
                     <input class="style_input" size="10" required maxlength="12" type="text" name="nombre" id="nombre" placeholder="Nombre">
                   </div>
                   <div class="col-12 col-md-6">
-                    <!-- <label for="">Apellido</label> -->
                     <input class="style_input" size="10" required maxlength="12" type="text" name="Apellido" id="Apellido" placeholder="Apellido">
                   </div>
                   <div class="col-12 d-flex justify-content-start">
-                    <!-- <label for="">Email</label> -->
                     <input class="style_input" size="27" maxlength="40" required type="text" name="email" id="email" placeholder="Email">
                   </div>
                   <div class="col-12 col-md-8 d-flex justify-content-center">
