--- a/subpaginas/alabanza.html
+++ b/subpaginas/alabanza.html
@@ -66,7 +66,6 @@
                 <li><a class="navbar-suba" href="./alabanza.html">Alabanzas</a></li>
               </ul>
             </li>
-            <li><a class="nav-link navbar-a" href="../paginas/servicio.html">Servicios</a></li>
             <li>
               <a class="nav-link navbar-a" href="#">Actividades</a>
               <ul class="navbar-submenu">
@@ -92,7 +91,7 @@
     <main>
       <section>
         <div class="container-fluit portada_book">
-          <img class="" src="../img/alabanza/portada.jpg" alt="alabad a dios">
+          <img class="w-100" src="../img/alabanza/portada.jpg" alt="alabad a dios">
         </div>
       </section>
       <section>
